node/be/overlays/dev/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-playground-be
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: devops-playground-be
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
