node/be/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  tls:
    - hosts:
        - webapp.dev.local
  rules:
    - host: webapp.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-playground-be
                port:
                  number: 88
